fixed date alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,7 @@ ul {
 
 .dates {
     font-size: 1.2em;
-    margin: 30px 0;
+    padding: 5px 0;
     color: #696969;
 }
 
